unused-configs/online-boutique-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: online-boutique-nginx-ingress 
  namespace: online-boutique-app
spec:
  ingressClassName: online-boutique-nginx
  rules:
  - host: online-boutique.f5.local
    http:
      paths:
      - path: /
        pathType: ImplementationSpecific
        backend:
          service:
            name: frontend
            port:
              number: 80
